2007-07-29  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* tests/Makefile.am:
	* tests/check/Makefile.am:
	* tests/check/gnet/gnetconnhttp.c:
	* tests/check/gnet/gnetinetaddr.c:
	* tests/check/gnet/gnetipv6.c:
	* tests/check/gnet/gnettcpsocket.c:
	* tests/conn_http_test.c:
	* tests/inetaddr_test.c:
	* tests/ipv6_test.c:
	* tests/tcp_test.c:
	  Move some more tests over to the check unit testing framework.

2007-07-28  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/Makefile.am:
	* tests/base64_test.c:
	* tests/check/Makefile.am:
	* tests/check/gnet/gnetbase64.c:
	* tests/check/gnet/gnethash.c:
	* tests/check/gnet/gnetpack.c:
	* tests/check/gnet/gnetunpack.c:
	* tests/check/gnet/gneturi.c:
	* tests/hash_test.c:
	* tests/pack_test.c:
	* tests/unpack_test.c:
	* tests/uri_test.c:
	  Migrate some of the existing unit tests over to the check unit
	  testing framework (will currently only be run if you do
	  'make check' in tests/check/). While we're at it, fix up packing
	  and unpacking checks for 64-bit platforms.

2007-07-28  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gnetcheck.c:
	* tests/check/gnetcheck.h:
	  Call the internal gnet_check_init() when setting up a unit test,
	  so we intercept criticals and ASSERT_WARNING() in the tests works.

2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.c:
	* src/pack.h:
	  Const-ify input buffer arguments to gnet_unpack*().

2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.c: (flipmemcpy):
	  Fix broken flipmemcpy() function - it never actually reversed the
	  order! Which noone ever noticed, because it is only used if more
	  than four bytes need reversing, and the only types with a possible
	  size of more than four bytes are void* and double and at least for
	  the latter the endianness modifiers are ignored. Not sure what to
	  do about pointers yet, we should probably just ignore those